# rooftop_tools

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
notebooks/: filter_rooftops_to_agra_solan.ipynb  filter_rooftops_to_new_pilot_areas.ipynb  filter_rooftops_to_pilot_dists.ipynb  fortify_identify_s2_pilot_dists.ipynb  gen_kmls.ipynb  sample_rooftops.ipynb  sample_rooftops_agra_indore.ipynb
src/rooftop_tools/: __init__.py  utils_rooftop.py  visualization.py
src/rooftop_tools/merging/: __init__.py  matching.py
src/rooftop_tools/points/: __init__.py  links.py  snapping.py
src/rooftop_tools/roads/: __init__.py
src/rooftop_tools/rooftops/: __init__.py  matching.py  sampling.py
src/rooftop_tools/s2/: __init__.py  coverage.py  geometry.py
