[project]
name = "rooftop-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dougj892", email = "dougj892@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]
