[project]
name = "rooftop-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dougj892", email = "dougj892@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "s2cell>=1.8.0",
    "s2sphere>=0.2.5",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "folium>=0.20.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "mypy>=1.17.1",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.1",
    "openpyxl>=3.1.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]
